Followed Beginner Tutorial
Followed tutorial by Gorka Games:
https://www.youtube.com/watch?v=HNfpKFER2hI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/IndependentStudy.IndependentStudyGameMode"
+GlobalDefaultGameMode="/Script/LearningWithCPP.LearningWithCPPGameMode"
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -49,15 +49,15 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/IndependentStudy")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/IndependentStudy")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="IndependentStudyGameMode")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="IndependentStudyCharacter")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/LearningWithCPP")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/LearningWithCPP")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="LearningWithCPPGameMode")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="LearningWithCPPCharacter")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=AFA60A4748BF1BD9E73B33AB6832CF74
+SecurityToken=6D0C95994540B89C31DB3D8F3E41C44C
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
