Added Temperature Conversion Interface

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Levels/PartOne.PartOne
+EditorStartupMap=/Game/Levels/PartOne.PartOne
 GlobalDefaultGameMode="/Script/LearningWithCPP.LearningWithCPPGameMode"
 
 [/Script/Engine.RendererSettings]
