Restructured Source File Structure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Levels/PartOne.PartOne
 EditorStartupMap=/Game/Levels/PartOne.PartOne
 GlobalDefaultGameMode="/Script/LearningWithCPP.LearningWithCPPGameMode"
+GameInstanceClass=/Game/MyCustomContent/SaveStuff/MyCustomGameInstance.MyCustomGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
