MapSites converted to Actors
Doors, Walls, and Rooms now all spawn within the world. The next step is to figure out how to give physical representation to each of these so that a physical maze may be generated

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/PartOne.PartOne
-EditorStartupMap=/Game/Levels/PartOne.PartOne
+EditorStartupMap=/Game/Levels/Maze.Maze
 GlobalDefaultGameMode="/Script/LearningWithCPP.LearningWithCPPGameMode"
 GameInstanceClass=/Game/MyCustomContent/MyGameInstance.MyGameInstance_C
 
